# openaoe

./: .gitignore  CMakeLists.txt  make.bat
src/: main.cpp
src/shaders/: main.vert
